--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,8 +1,8 @@
-{
-    "version": "0.1.0",
-    "command": "Chrome",
-    "osx": {
-        "command": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
-    },
-    "args": ["${index}"]
-}
+// {
+//     "version": "0.1.0",
+//     "command": "Chrome",
+//     "osx": {
+//         "command": "/Applications/Google Chrome.app/Contents/MacOS/Google Chrome"
+//     },
+//     "args": ["${index}"]
+// }
